[translations] nl update

--- a/po/nl.po
+++ b/po/nl.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ViX\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-09-08 18:12+0100\n"
-"PO-Revision-Date: 2012-09-09 09:52+0100\n"
+"POT-Creation-Date: 2012-09-10 20:28+0100\n"
+"PO-Revision-Date: 2012-09-11 07:38+0100\n"
 "Last-Translator: \n"
 "Language-Team: Andy Blackburn, Rob van der Does\n"
 "Language: Nederlands\n"
@@ -1677,6 +1677,9 @@ msgstr "Configureer interface"
 msgid "Configure nameservers"
 msgstr "Configureer nameservers"
 
+msgid "Configure remote control type"
+msgstr "Configureer type afstandsbediening"
+
 msgid "Configure your internal LAN"
 msgstr "Configureer uw interne netwerk"
 
@@ -1902,6 +1905,12 @@ msgstr "DHCP"
 
 msgid "DLNA support"
 msgstr "DLNA support"
+
+msgid "DMM advanced"
+msgstr "DMM geavanceerd"
+
+msgid "DMM normal"
+msgstr "DMM normaal"
 
 #
 msgid "DUAL LAYER DVD"
@@ -2397,6 +2406,9 @@ msgstr "EPG locatie"
 msgid "ERROR - failed to scan (%s)!"
 msgstr "Fout - Zoeken mislukt (%s)!"
 
+msgid "ET9x00/6500"
+msgstr "ET9x00/6500"
+
 msgid "East"
 msgstr "Oost"
 
@@ -2597,6 +2609,9 @@ msgstr ""
 
 msgid "Estonian"
 msgstr "Estisch"
+
+msgid "Et5000/6000"
+msgstr "Et5000/6000"
 
 msgid "Ethernet network interface"
 msgstr "Ethernet network interface"
@@ -3433,6 +3448,9 @@ msgstr "Omgekeerd"
 
 msgid "Ipkg"
 msgstr "Ipkg"
+
+msgid "Is this setting ok?"
+msgstr "Is deze instelling OK?"
 
 msgid "Is this videomode ok?"
 msgstr "Is deze videomode goed?"
@@ -5251,6 +5269,9 @@ msgstr "Bewaar de instellingen voor elke map"
 msgid "Remote box"
 msgstr "Remote box"
 
+msgid "Remote type"
+msgstr "Type afstandsbediening"
+
 msgid "Remove"
 msgstr "Verwijderen"
 
@@ -6793,6 +6814,9 @@ msgstr "TSID"
 msgid "TV button mode"
 msgstr "TV toets functie"
 
+msgid "TV physical address report"
+msgstr "TV physiek adres rapporteren"
+
 msgid "TXT PID"
 msgstr "TXT PID"
 
@@ -7996,6 +8020,9 @@ msgstr "VCR scart"
 
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (intro trailer)"
+
+msgid "VU+"
+msgstr "VU+"
 
 msgid "Version:"
 msgstr "Versie:"
