[translations] et update (thanks Rimas)

--- a/po/et.po
+++ b/po/et.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-14 19:02+0100\n"
+"POT-Creation-Date: 2012-09-08 18:12+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: rimas\n"
 "Language-Team: Raivo, Henkka, eesatfan, rimas\n"
@@ -59,7 +59,7 @@ msgid ""
 "Online update of your STB_BOX software."
 msgstr ""
 "\n"
-"STB_BOX tarkvara uuendamine."
+"STB_BOX tarkvara uuendamine üle võrgu."
 
 msgid ""
 "\n"
@@ -340,9 +340,6 @@ msgstr "Teine inforiba"
 msgid "3"
 msgstr "3"
 
-msgid "30 Days"
-msgstr "30 päeva"
-
 msgid "3D Mode"
 msgstr "3D režiim"
 
@@ -496,7 +493,7 @@ msgstr ""
 "Keela TV ja proovi uuesti?\n"
 
 msgid "A/V Settings"
-msgstr "Heli- ja pildisätted"
+msgstr "Heli ja pildi seaded"
 
 msgid "AA"
 msgstr "AA"
@@ -829,6 +826,12 @@ msgstr "Tähestik"
 msgid "Alphanumeric"
 msgstr "Tähestikujärjekord"
 
+msgid "Altern"
+msgstr ""
+
+msgid "Alternative numbering Mode"
+msgstr "Alternatiivne numeratsioon"
+
 msgid "Alternative services tuner priority"
 msgstr "Tuuneri eelistus asenduskanalitel"
 
@@ -979,11 +982,17 @@ msgstr "Automaatne"
 msgid "Automatic Scan"
 msgstr "Automaatotsing"
 
+msgid "Automatic image backup"
+msgstr "Automaatne tarkvarakoopia loomine"
+
 msgid "Automatic refresh"
 msgstr "Automaatne värskendamine"
 
 msgid "Automatic save"
 msgstr "Automaatne salvestamine"
+
+msgid "Automatic setting backup"
+msgstr "Automaatne varukoopia loomine seadistustest"
 
 msgid "Automatically update Client/Server View?"
 msgstr ""
@@ -1021,6 +1030,9 @@ msgstr "Tagasi"
 msgid "Background"
 msgstr "Taust"
 
+msgid "Background check"
+msgstr "Otsing taustal"
+
 msgid "Background delete option"
 msgstr "Taustal kustutamise valikud"
 
@@ -1047,6 +1059,9 @@ msgstr "Varukoopia loomine..."
 
 msgid "Backup system settings"
 msgstr "Seadistuste varundamine"
+
+msgid "BackupManager"
+msgstr "Varukoopia haldur"
 
 msgid "Band"
 msgstr "Sagedusala"
@@ -1121,7 +1136,7 @@ msgid "Buffers:"
 msgstr "Puhvrid:"
 
 msgid "Build:"
-msgstr "Build:"
+msgstr "Järk:"
 
 msgid "Bulgarian"
 msgstr "Bulgaaria"
@@ -1190,7 +1205,7 @@ msgid "CCcam Info Setup"
 msgstr "CCcam info seadistamine"
 
 msgid "CCcam Provider Info"
-msgstr ""
+msgstr "CCcam Provider Info"
 
 msgid "CCcam Remote Info"
 msgstr ""
@@ -1794,9 +1809,6 @@ msgstr "DVD data vorming"
 msgid "DVD media toolbox"
 msgstr "DVD tööriistad"
 
-msgid "Daily"
-msgstr "Iga päev"
-
 msgid "Danish"
 msgstr "Taani"
 
@@ -1828,7 +1840,7 @@ msgid "Default Settings"
 msgstr "Vaikeväärtused"
 
 msgid "Default movie location"
-msgstr "Salvestiste tavaasukoht"
+msgstr "Salvestuste tavaasukoht"
 
 msgid "Defaults"
 msgstr "Vaikeväärtused"
@@ -1971,7 +1983,7 @@ msgid "Dish"
 msgstr "Antenn"
 
 msgid "Disk space to reserve for recordings (in GB)"
-msgstr "Salvestistele hoitav kettaruum (GB)"
+msgstr "Salvestustele hoitav kettaruum (GB)"
 
 msgid "Display 16:9 content as"
 msgstr "Näita 16:9 materjal"
@@ -2480,6 +2492,9 @@ msgstr "Välju"
 msgid "Exit EPG"
 msgstr "Sulge saatekava"
 
+msgid "Exit Movieplayer?"
+msgstr "Sulged filmimängija?"
+
 msgid "Exit editor"
 msgstr "Välju redaktorist"
 
@@ -2665,7 +2680,7 @@ msgid "Friday"
 msgstr "Reede"
 
 msgid "From :"
-msgstr ""
+msgstr "Asukohast :"
 
 #, python-format
 msgid "Frontprocessor version: %d"
@@ -2931,7 +2946,7 @@ msgid "If logs are using the set maximum space used the eldest will be deleted."
 msgstr "Kui logidele lubatud suurim kettaruum on täis, kustutakse kõige vanemad."
 
 msgid "If set to 'Yes' recordings will be deleted to a trashcan. That way thay can still be played."
-msgstr "Määtates 'jah', liigutatakse kustutatud salvestised prügikasti. Sealt saab neid veel vaadata."
+msgstr "Määtates 'jah', liigutatakse kustutatud salvestused prügikasti. Sealt saab neid veel vaadata."
 
 msgid "If set to 'yes' a special seekbar is available during timeshift."
 msgstr "Määrates 'jah', on ajanihke ajal kasutuses otsiriba"
@@ -3010,6 +3025,9 @@ msgstr "Tarkvarast"
 
 msgid "Image:"
 msgstr "Tarkvara:"
+
+msgid "ImageManager"
+msgstr "Tarkvarakoopia haldur"
 
 msgid "In Progress"
 msgstr "Toimumas"
@@ -3310,6 +3328,10 @@ msgstr "Eelmine kiirus"
 msgid "Last used share: "
 msgstr ""
 
+msgctxt "thrird evnet: 'third' event label"
+msgid "Later"
+msgstr "Hiljem"
+
 msgid "Latitude"
 msgstr "Laiuskraad"
 
@@ -3490,10 +3512,10 @@ msgid "Manufacturer"
 msgstr "Tootja"
 
 msgid "Margin after record"
-msgstr "Salvestise lõppu lisatakse"
+msgstr "Salvestuse lõppu lisatakse"
 
 msgid "Margin before record (minutes)"
-msgstr "Salvestise algusesse lisatakse (minutit)"
+msgstr "Salvestuse algusesse lisatakse (minutit)"
 
 msgid "Max. Bitrate: "
 msgstr "Max. bitikiirus: "
@@ -3798,6 +3820,7 @@ msgstr "Uus versioon:"
 msgid "News Current Affairs"
 msgstr "Uudised"
 
+msgctxt "now/next: 'next' event label"
 msgid "Next"
 msgstr "Järgmine"
 
@@ -3884,7 +3907,7 @@ msgid "No satellite frontend found!!"
 msgstr "Ei leitud satituunerit!!"
 
 msgid "No tags are set on these movies."
-msgstr "Salvestisele pole märksõnu määratud."
+msgstr "Salvestustele pole märksõnu määratud."
 
 msgid "No to all"
 msgstr "EI kõigile"
@@ -4018,8 +4041,9 @@ msgstr ""
 msgid "Nothing to upgrade"
 msgstr "Uuendusi ei ole"
 
+msgctxt "now/next: 'now' event label"
 msgid "Now"
-msgstr "Nüüd"
+msgstr "Hetkel"
 
 msgid "Now Playing"
 msgstr "Hetkel esitatakse"
@@ -4091,7 +4115,7 @@ msgid "On"
 msgstr "Sees"
 
 msgid "On end of movie"
-msgstr "Filmi lõpus"
+msgstr "Filmi lõppu"
 
 msgid "On raching the end of a file during playback, you can choose the box's behaviour."
 msgstr "Siin saab määrata vastuvõtja käitumise taasesituse lõppemisel."
@@ -4112,13 +4136,7 @@ msgid "One"
 msgstr "Üks"
 
 msgid "One line"
-msgstr ""
-
-msgid "Online Update"
-msgstr "Uuendamise seaded"
-
-msgid "Online update"
-msgstr "Otsi uuendusi"
+msgstr "Üks rida"
 
 msgid "OnlineVersionCheck"
 msgstr "Uuenduste kontroll"
@@ -4131,9 +4149,6 @@ msgstr "Muuda ainult silumiseks; vaikimisi '20 MB/s'."
 
 msgid "Only change for debugging; default is 'Internal hdd only'."
 msgstr "Muuda ainult silumiseks; vaikimisi 'ainiult sisesel kõvakettal'."
-
-msgid "Only change for debugging; default is 'Off'."
-msgstr "Muuda ainult silumiseks; vaikimisi 'Väljas'"
 
 msgid "Only extensions."
 msgstr "Ainult laiendused."
@@ -4263,8 +4278,23 @@ msgstr "Protsent vasakul"
 msgid "Percentage Right"
 msgstr "Protsent paremal"
 
-msgid "Perform an online update check"
-msgstr "Otsi üle võrgu uuendusi"
+msgid "Perform a full image backup"
+msgstr "Loo täielik tarkvarakoopia"
+
+msgid "Perform a image backup before updating."
+msgstr "Loo enne uuendamist tarkvarakoopia."
+
+msgid "Perform a setting backup before updating."
+msgstr "Loo enne uuendamist varukoopia seadistustest."
+
+msgid "Perform a setting backup,"
+msgstr "Loo seadistustest varukoopia,"
+
+msgid "Perform a setting backup, making a backup before updating is strongly advised."
+msgstr ""
+
+msgid "Perform an online update check in the background"
+msgstr "Otsi taustal uuendusi"
 
 msgid "Permanent Timeshift Enable"
 msgstr "Luba pidev ajanihe"
@@ -4298,6 +4328,9 @@ msgstr "Kanalilogo"
 
 msgid "Picon and Service Name"
 msgstr "Kanalilogod ja -nimi"
+
+msgid "Picon width"
+msgstr "Kanalilogo laius"
 
 msgid "Picture in Graphics"
 msgstr "PiG (mini-TV nimekirjas)"
@@ -4361,7 +4394,7 @@ msgid "Please check your network settings!"
 msgstr "Kontrolli võrgu seadeid!"
 
 msgid "Please choose CCcam-Reader"
-msgstr ""
+msgstr "Vali CCcam-lugeja"
 
 msgid "Please choose an extension..."
 msgstr "Vali laiendus..."
@@ -4678,6 +4711,9 @@ msgstr "Eelvaade"
 msgid "Preview menu"
 msgstr "Eelvaate menüü"
 
+msgid "Preview selected channel"
+msgstr "Valitud kanali eelvaatlus"
+
 msgid "Primary DNS"
 msgstr "Esmane nimeserver"
 
@@ -4788,7 +4824,7 @@ msgid "Rating undefined"
 msgstr "Hinnang määramata"
 
 msgid "Read Userdata from oscam.conf"
-msgstr ""
+msgstr "Loe kasutajaandmeid oscam.conf failist"
 
 msgid "Reader"
 msgstr "Kaardipesa"
@@ -4832,7 +4868,7 @@ msgid "Reboot"
 msgstr "Taaskäivitus"
 
 msgid "Rec"
-msgstr ""
+msgstr "Salv."
 
 msgid "Reception Settings"
 msgstr "Vastuvõtu seaded"
@@ -4855,9 +4891,6 @@ msgstr "Salvestamise seaded"
 
 msgid "Recording Setup"
 msgstr "Salvestuse seaded"
-
-msgid "Recording data sync size"
-msgstr ""
 
 msgid "Recording in progress"
 msgstr "Toimub salvestamine"
@@ -4899,7 +4932,7 @@ msgid "Regard deep standby as standby"
 msgstr "Käsitle sügavooterežiimi tavalise ooterežiimina"
 
 msgid "Release"
-msgstr "Väljalase"
+msgstr "Stabiilne väljalase"
 
 msgid "Reload"
 msgstr "Lae uuesti"
@@ -5361,7 +5394,7 @@ msgid "Select Network Adapter"
 msgstr "Vali võrgukaart"
 
 msgid "Select a movie"
-msgstr "Vali salvestis"
+msgstr "Vali film"
 
 msgid "Select audio track"
 msgstr "Vali heliriba"
@@ -5394,7 +5427,7 @@ msgid "Select how to activate the Quick EPG mode:"
 msgstr "Vali, kuidas käivitada QuickEPG:"
 
 msgid "Select how you want recording names to be populated."
-msgstr "Vali, millisel kujul salvestiste nimed luuakse."
+msgstr "Vali, millisel kujul salvestuste nimed luuakse."
 
 msgid "Select if timeshift must continue when set to record."
 msgstr "Määra 'jah', kui soovid, et ajanihe jätkub ka pärast selle salvestuseks määramist."
@@ -5555,6 +5588,9 @@ msgstr ""
 "Kanal pole saadaval!\n"
 "Kontrolli tuuneri seadeid!"
 
+msgid "Service width"
+msgstr "Kanali laius"
+
 msgid "Serviceinfo"
 msgstr "Kanaliinfo"
 
@@ -5668,6 +5704,12 @@ msgstr "Määra edasikerimise kiirused."
 
 msgid "Set the values for slow-motion speeds."
 msgstr "Määra aeg-luubis kiirused."
+
+msgid "Set the width allocated to the picon."
+msgstr "Laius määratakse kanalilogo järgi"
+
+msgid "Set the width allocated to the service name."
+msgstr "Laius määratakse kanali nime järgi"
 
 msgid "Set time window to 1 hour"
 msgstr "Määra ajaaknaks 1 tund"
@@ -5830,7 +5872,7 @@ msgid "Show WLAN Status"
 msgstr "Näita WiFi Olekut"
 
 msgid "Show a popup message after a recording has finished and before start next in queue."
-msgstr ""
+msgstr "Näita teavitust pärast salvestuse lõppemist ja enne järjekorras järgmisie algamist."
 
 msgid "Show alternative radio mode"
 msgstr "Kasuta TV stiilis raadio vaadet"
@@ -5887,7 +5929,7 @@ msgid "Show job tasks in extensions"
 msgstr "Näita käsiloevaid tööülesandeid laienduste menüüs"
 
 msgid "Show live tv when movie stopped"
-msgstr "Salvestise lõppedes mine telekanalile"
+msgstr "Filmi lõppedes mine telekanalile"
 
 msgid "Show network mounts ..."
 msgstr "Näita võrgu haakepunkte..."
@@ -6038,7 +6080,7 @@ msgid "Software"
 msgstr "Tarkvara"
 
 msgid "Software Update"
-msgstr "Tarkvara uuendamine"
+msgstr "Uuendamise seaded"
 
 msgid "Software management"
 msgstr "Tarkvara haldamine"
@@ -6241,6 +6283,9 @@ msgstr "Salvesta asukoht"
 msgid "Stored position"
 msgstr "Salvestatud asukoht"
 
+msgid "Stream"
+msgstr "Voogesitus"
+
 msgid "Stream request"
 msgstr "Striimi päring"
 
@@ -6439,7 +6484,7 @@ msgstr ""
 "Paigalda see."
 
 msgid "The DVD standard doesn't support H.264 (HDTV) video streams. Do you want to create a STB_BOX format data DVD (which will not play in stand-alone DVD players) instead?"
-msgstr "DVD standard ei toeta H.264 (HDTV) video voogesitust. Kas soovite luua STB_BOX vormingus andmete (data) DVD, mida teised DVD mängijad ei mängi?"
+msgstr "DVD standard ei toeta H.264 (HDTV) video voogesitust. Kas soovite luua Vu+ Uno vormingus andmete (data) DVD, mida teised DVD mängijad ei mängi?"
 
 msgid ""
 "The EPGSearch plugin is not installed!\n"
@@ -6665,7 +6710,7 @@ msgid "This allows the STB_BOX to decode the stream (if the ECM data is included
 msgstr "STB_BOX saab voo dekodeerida (kui ECM andmed on kaasatud ja olemas on kehtiv kaart)"
 
 msgid "This allows you change the font size relative to skin size, so 1 increases by 1 point size, and -1 decreases by 1 point size"
-msgstr "Siin saab muuta tähesuurust suhtes teemaga. 1 suurendab ja -1 vähendab "
+msgstr "Siin saab muuta tähesuurust suhtes teemaga. 1 suurendab ja -1 vähendab"
 
 msgid "This allows you change the number of rows shown."
 msgstr "Siin saab muuta näidatavate ridade arvu."
@@ -6686,13 +6731,13 @@ msgid "This option allows you choose how to display remaining time, or elapsed t
 msgstr "Siin saab valida, kuidas näidatakse möödunud või järelejäänud aega. Või mõlemat."
 
 msgid "This option allows you choose how to display the remaining/elapsed time for Media playback."
-msgstr "Siin saab valida, kuidas näidatakse möödunud/järelejäänud aega salvestiste esitusel."
+msgstr "Siin saab valida, kuidas näidatakse möödunud/järelejäänud aega salvestuste esitusel."
 
 msgid "This option allows you choose how to display the remaining/elapsed time for live tv."
 msgstr "Siin saab valida, kuidas näidatakse möödunud/järelejäänud aega telesaadete esitusel."
 
 msgid "This option allows you choose how to display the remaining/elapsed time for media playback."
-msgstr "Siin saab valida, kuidas näidatakse möödunud/järelejäänud aega salvestiste esitusel."
+msgstr "Siin saab valida, kuidas näidatakse möödunud/järelejäänud aega salvestuste esitusel."
 
 msgid "This option allows you choose the background colour of transparent picons."
 msgstr "Siin saab valida läbipaistvate kanalilogode taustavärvi."
@@ -7173,7 +7218,7 @@ msgid ""
 "This may take a few minutes"
 msgstr ""
 "Toimub automatiseeritud uuendamine\n"
-"Oota STB_BOX taaskäivitamist\n"
+"Oota STB_BOX taaskäivitumist\n"
 "Selleks võib kuluda mõni minut"
 
 msgid "Unattended upgrade without GUI and reboot system"
@@ -7241,6 +7286,9 @@ msgstr "Tarkvara kataloogi uuendamine"
 
 msgid "Updating... Please wait... This can take some minutes..."
 msgstr "Uuendan... Oota... See võib kesta mõne minuti..."
+
+msgid "Upgrade and reboot system"
+msgstr "Uuenda ja taaskäivita süsteem"
 
 msgid "Upgrade finished."
 msgstr "Uuendamine tehtud."
@@ -7324,7 +7372,7 @@ msgid "Use the Left/Right buttons on your remote to move the OSD up/down"
 msgstr "Kasuta ekraanigraafika üles/alla liigutamiseks VASAK/PAREM nuppe."
 
 msgid "Use the Networkwizard to configure selected network adapter"
-msgstr "Kasuta Networkwizard abilist valitud võrguliidese seadmiseks"
+msgstr "Kasuta seadistusabilist valitud võrguliidese seadmiseks"
 
 msgid "Use the Networkwizard to configure your Network\n"
 msgstr "Kasuta võrgu seadistamiseks seadistusabilist\n"
@@ -7639,9 +7687,6 @@ msgstr "Kolmapäev"
 msgid "Weekday"
 msgstr "Nädalapäev"
 
-msgid "Weekly"
-msgstr "Iga nädal"
-
 msgid ""
 "Welcome to the Cutlist editor.\n"
 "\n"
@@ -7649,7 +7694,7 @@ msgid ""
 "\n"
 "Then seek to the end, press OK, select 'end cut'. That's it."
 msgstr ""
-"Tere tulemast salvestise lõikajasse.\n"
+"Tere tulemast salvestuse lõikajasse.\n"
 "\n"
 "Keri lõike koha algusesse.Vajuta OK, 'lõike algus'.\n"
 "\n"
@@ -7774,6 +7819,9 @@ msgstr "Wifi võrgu olek"
 msgid "With this option enabled the online checker will also check for experimental versions"
 msgstr "Määrates 'jah', otsitakse ka eksperimentaalseid uuendusi"
 
+msgid "With this option enabled, Channel numbers will start with '1' in each bouquet."
+msgstr "Selle valiku lubamisel algavad kanalinumbrid igas lemmiknimekirjas numbriga '1'."
+
 msgid "With this option enabled, pressing '0' will zap you to the first channel in your first bouquet and delete your zap-history."
 msgstr "Määrates 'jah', viib '0' vajutus alati kanalile 1 ja kustutab kanalivahetuse ajaloo."
 
@@ -7822,7 +7870,7 @@ msgid "Yes, always"
 msgstr "Jah, alati"
 
 msgid "Yes, and delete this movie"
-msgstr "Jah, kustuta see salvestis"
+msgstr "Jah, kustuta see salvestus"
 
 msgid "Yes, and don't ask again"
 msgstr "Jah, ja ära uuesti küsi"
@@ -8154,7 +8202,7 @@ msgid "[TimeShift] Restarting Timeshift!"
 msgstr "[Ajanihe] - Käivitame ajanihke uuesti!"
 
 msgid "[Timeshift] Merging records failed!"
-msgstr "[Ajanihe] Salvestiste liitmine nurjus!"
+msgstr "[Ajanihe] Salvestuste liitmine nurjus!"
 
 msgid "[alternative edit]"
 msgstr "[lisakanalite muutmine]"
@@ -8226,10 +8274,10 @@ msgid "add marker"
 msgstr "lisa marker"
 
 msgid "add recording (enter recording duration)"
-msgstr "salvesta (sisesta salvestise kestvus)"
+msgstr "salvesta (sisesta salvestuse kestvus)"
 
 msgid "add recording (enter recording endtime)"
-msgstr "salvesta (sisesta salvestise lõpuaeg)"
+msgstr "salvesta (sisesta salvestuse lõpuaeg)"
 
 msgid "add recording (indefinitely)"
 msgstr "salvesta (pidev salvestus)"
@@ -8655,7 +8703,7 @@ msgid "get the cards' server"
 msgstr ""
 
 msgid "go to deep standby"
-msgstr "mine sügavootele"
+msgstr "mine sügavootrežiimi"
 
 msgid "go to standby"
 msgstr "mine ooterežiimi"
@@ -8718,14 +8766,17 @@ msgstr "pane märk siia"
 msgid "invalid type"
 msgstr "kehtetu tüüp"
 
+msgid "is strongly advised."
+msgstr "luua oma süsteemist varukoopia."
+
 msgid "jazz"
 msgstr "džäss"
 
 msgid "jump back to the previous title"
-msgstr "hüppa eelmisele salvestisele"
+msgstr "hüppa eelmisele salvestusele"
 
 msgid "jump forward to the next title"
-msgstr "hüppa järgmisele salvestisele"
+msgstr "hüppa järgmisele salvestusele"
 
 msgid "jump to listbegin"
 msgstr "mine nimekirja algusse"
@@ -8743,7 +8794,7 @@ msgid "languages"
 msgstr "keeled"
 
 msgid "leave movie player..."
-msgstr "lõpeta salvestise taasesitus..."
+msgstr "sulge filmimängija..."
 
 msgid "left"
 msgstr "vasakul"
@@ -8774,6 +8825,9 @@ msgstr "läbiviik kuni"
 
 msgid "magazines/reports/documentary"
 msgstr "magasinid/reportaažid/dokumentaalid"
+
+msgid "making a backup before updating"
+msgstr "enne uuendamist on soovitatav"
 
 msgid "manual"
 msgstr "juhend"
@@ -9146,10 +9200,10 @@ msgid "select menu entry"
 msgstr "vali menüüpunkt"
 
 msgid "select movie"
-msgstr "vali salvestis"
+msgstr "vali salvestus"
 
 msgid "select the movie path"
-msgstr "vali salvestiste kataloog"
+msgstr "vali salvestuskataloog"
 
 msgid "serious music/classic music"
 msgstr "süvamuusika/klassikaline muusika"
@@ -9377,13 +9431,13 @@ msgid "template file"
 msgstr "mall"
 
 msgid "tennis/squash"
-msgstr ""
+msgstr "tennis/squash"
 
 msgid "textcolor"
 msgstr "teksti värv"
 
 msgid "this recording"
-msgstr "see salvestis"
+msgstr "see salvestus"
 
 msgid "this service is protected by a parental control pin"
 msgstr "see kanal on kaitstud lapselukuga"
@@ -9416,7 +9470,7 @@ msgid "uShare Port"
 msgstr "uShare port"
 
 msgid "uShare Setup"
-msgstr "uShare seadistus"
+msgstr "uShare seaded"
 
 msgid "unconfirmed"
 msgstr "kinnitamata"
@@ -9452,7 +9506,7 @@ msgid "view extensions..."
 msgstr "näita laiendusi..."
 
 msgid "view recordings..."
-msgstr "näita salvestisi..."
+msgstr "vaata salvestusi..."
 
 msgid "wait for ci..."
 msgstr "ci ootel..."
@@ -9532,3 +9586,35 @@ msgstr "kanalivahetus"
 msgid "zapped"
 msgstr "vahetatud"
 
+msgid "30 Days"
+msgstr "30 päeva"
+
+msgid "Online update"
+msgstr "Otsi uuendusi"
+
+#~ msgid "30 Days"
+#~ msgstr "30 päeva"
+
+#~ msgid "Daily"
+#~ msgstr "Iga päev"
+
+#~ msgid "Next"
+#~ msgstr "Järgmine"
+
+#~ msgid "Now"
+#~ msgstr "Nüüd"
+
+#~ msgid "Online Update"
+#~ msgstr "Uuendamise seaded"
+
+#~ msgid "Online update"
+#~ msgstr "Otsi uuendusi"
+
+#~ msgid "Only change for debugging; default is 'Off'."
+#~ msgstr "Muuda ainult silumiseks; vaikimisi 'Väljas'"
+
+#~ msgid "Perform an online update check"
+#~ msgstr "Otsi üle võrgu uuendusi"
+
+#~ msgid "Weekly"
+#~ msgstr "Iga nädal"
